--- a/projects/Basic-Portfolio/assets/css/style.css
+++ b/projects/Basic-Portfolio/assets/css/style.css
@@ -1,165 +1,217 @@
-html {
-	box-sizing: border-box;
-}
-*, *:before, *:after {
-	box-sizing: inherit;
-}
 body {
-  background-image: url("../../assets/images/full-bloom.png");
-  color: #777777;
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  margin: 0;
-  overflow: auto;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/full-bloom.png");
+}
+
+* {
+  box-sizing: border-box;
 }
 
 
-.wrapper-main {
-  width: 960px;
-  margin: 100px auto;
-  background-color: #fff;
-  
-}
-  
-  
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-  
-img { 
-  float: left;
-  margin: 10px 15px 15px 10px;
-  border: 50px;
-  overflow: auto;
-}
 
-
-#nav {
+.container {
   width: 100%;
-  background: #fff;
-  border-bottom: 1px solid #cccccc;
-}
-
-#nav div {
-  width: 960px;
+  max-width: 960px;
   margin: 0 auto;
-  overflow: hidden;
-}
-#nav span {
-  font-size: 170%;
-  padding: 20px 0 30px;
-  font-family: 'Georgia', Times, Times New Roman, serif;
-  color: #ffffff;
-  background-color: #4aaaa5;
-  float: left;
-  
-  
-}
-#nav a {
-  text-decoration: none;
-  font-size: 140%;
-  color: #777777;
-  position: relative;
-  left: 500px;
-  
+  clear: both;
 }
 
-
-#nav-menu {
-
-position: relative;
-bottom: 70px;
-left: 250px;
-
-}
-
-
-  
-h1 {
-  font-size: 145%;
-  color: #4aaaa5;
-  
-}
-
-
-
- 
+h1,
+h2,
+h3,
 p {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  text-align: left;
-  line-height: 2;
-  
-  
+  margin-bottom: 20px;
+}
 
+p:last-child {
+  margin-bottom: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
+}
+
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
+}
+
+h2,
+h3 {
+  font-size: 22px;
 }
 
 
-.footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   height: 8%;
-   width: 100%;
-   background-color: #666666;
-   color: #999999;
-   text-align: center;
-   border-top: 4px solid #4aaaa5;
+
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
 }
 
-
-/*------Portfolio---------*/
-
-.title {
+#logo {
+  float: left;
+  width: 300px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
   text-align: center;
-  color: #ffffff;
-  background-color: #4aaaa5;
-  padding: 10px 120px;
+  text-decoration: none;
+  background: #4aaaa5;
+}
+
+nav {
+  float: right;
+  margin-top: 25px;
+}
+
+nav a {
   display: inline-block;
-  position: relative;
-  bottom: 70px;
-  
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
 }
 
-.root-frame {
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 10px 50px;
-  position: relative;
-  bottom: 10px;
+nav a:first-child {
+  border-left: 0 none;
 }
 
-.root-frame img {
+
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+  height: 50px;
+}
+
+h3, h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+
+
+#main-container {
+  padding-top: 130px;
+  min-height: calc(100vh - 70px);
+}
+
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 960px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+
+
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
   width: 100%;
 }
 
-.box1 {
-  grid-column: 1;
-  grid-row: 1;
-  height: 300px;
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
 }
 
-.box2 {
-  grid-column: 2;
-  grid-row: 1;
-  height: 300px;
+textarea {
+  height: 200px;
 }
 
-.box3 {
-  grid-column: 1;
-  grid-row: 2;
-  height: 300px;
-}
-
-.box4 {
-  grid-column: 2;
-  grid-row: 2;
-  height: 300px;
-}
-
-.box5 {
-  grid-column: 1;
-  grid-row: 3;
-  height: 300px;
+input[type=submit] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
 }
